# mytts

./: .gitignore  AGENTS.md  BUILD.md  LICENSE  README.md  gradlew  opencode-session.md  plan.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
app/src/main/java/com/example/mytts/: MainActivity.kt  MyTTSApplication.kt
app/src/main/java/com/example/mytts/audio/: AudioBufferQueue.kt  AudioPlayer.kt  AudioProducer.kt  PlaybackController.kt  TextChunker.kt  TextProcessor.kt
app/src/main/java/com/example/mytts/engine/: EspeakBridge.kt  KokoroEngine.kt  PhonemeConverter.kt  Tokenizer.kt  VoiceStyleLoader.kt
app/src/main/java/com/example/mytts/service/: PlaybackService.kt
app/src/main/java/com/example/mytts/ui/: MainScreen.kt
app/src/main/java/com/example/mytts/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/mytts/util/: PreferencesManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
